--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -12,6 +12,8 @@ spec:
 
   - name: kaniko
     image: gcr.io/kaniko-project/executor:debug
+    args: ["--dockerfile=dockerfile",
+           "--context=/kaniko/sharedvolume"]
     volumeMounts:
       - name: sharedvolume
         mountPath: '/kaniko/sharedvolume'
