--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -20,7 +20,7 @@ spec:
   #- name: kaniko
     #image: gcr.io/kaniko-project/executor:debug
     #args: ["--dockerfile=dockerfile",
-           "--context=/kaniko/sharedvolume"]
+           #"--context=/kaniko/sharedvolume"]
     #volumeMounts:
       #- name: sharedvolume
         #mountPath: '/kaniko/sharedvolume'
