--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -1,5 +1,7 @@
 apiVersion: v1
 kind: Pod
+metadata:
+  name: kaniko
 spec:
   containers:
   - name: nodego
@@ -16,22 +18,6 @@ spec:
       limits:
         cpu: "2000m"
         memory: "2048Mi"
-
-  #- name: kaniko
-    #image: gcr.io/kaniko-project/executor:debug
-    #args: ["--dockerfile=dockerfile",
-           #"--context=/kaniko/sharedvolume"]
-    #volumeMounts:
-      #- name: sharedvolume
-        #mountPath: '/kaniko/sharedvolume'
-    
-    #resources:
-      #requests:
-        #cpu: "50m"
-        #memory: "124Mi"
-      #limits:
-        #cpu: "2000m"
-        #memory: "2048Mi"
 
   #restartPolicy: OnFailure
   volumes: 
