--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: kaniko
+  namespace: kaniko
 spec:
   containers:
   - name: nodego
@@ -18,6 +19,21 @@ spec:
       limits:
         cpu: "2000m"
         memory: "2048Mi"
+
+  - name: kaniko
+      image: gcr.io/kaniko-project/executor:debug
+      args: ["--dockerfile=dockerfile",
+             "--context=/kaniko/sharedvolume"]
+      volumeMounts:
+        - name: sharedvolume
+          mountPath: /kaniko/sharedvolume
+      resources:
+        requests:
+          cpu: "50m"
+          memory: "124Mi"
+        limits:
+          cpu: "2000m"
+          memory: "2048Mi"
 
   #restartPolicy: OnFailure
   volumes: 
