--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -20,7 +20,7 @@ spec:
         memory: "2048Mi"
 
   - name: kaniko
-    image: gcr.io/kaniko-project/executor:debug
+    image: gcr.io/kaniko-project/executor:debug-539ddefcae3fd6b411a95982a830d987f4214251
     command: ['cat']
     tty: true
     volumeMounts:
