--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -21,7 +21,8 @@ spec:
 
   - name: kaniko
     image: gcr.io/kaniko-project/executor:debug-539ddefcae3fd6b411a95982a830d987f4214251
-    command: ['cat']
+    command:
+    - /busybox/cat
     tty: true
     volumeMounts:
       - name: sharedvolume
