--- a/KubernetesPod.yaml
+++ b/KubernetesPod.yaml
@@ -4,29 +4,29 @@ metadata:
   name: kaniko
 spec:
   containers:
-  - name: nodego
-    image: tyagivasu/ubuntu-v1:16.04
-    command: ['cat']
-    tty: true
-    volumeMounts:
-      - name: sharedvolume
-        mountPath: /var/sharedvolume
-    resources:
-      requests:
-        cpu: "50m"
-        memory: "124Mi"
-      limits:
-        cpu: "2000m"
-        memory: "2048Mi"
+  #- name: nodego
+    #image: tyagivasu/ubuntu-v1:16.04
+    #command: ['cat']
+    #tty: true
+    #volumeMounts:
+      #- name: sharedvolume
+        #mountPath: /var/sharedvolume
+    #resources:
+      #requests:
+        #cpu: "50m"
+        #memory: "124Mi"
+      #limits:
+        #cpu: "2000m"
+        #memory: "2048Mi"
 
   - name: kaniko
     image: gcr.io/kaniko-project/executor:debug-539ddefcae3fd6b411a95982a830d987f4214251
     command:
     - /busybox/cat
     tty: true
-    volumeMounts:
-      - name: sharedvolume
-        mountPath: /root/shared
+    #volumeMounts:
+      #- name: sharedvolume
+        #mountPath: /root
     resources:
       requests:
         cpu: "50m"
